That should do it for publishing on the backend. Still need to try it out with postman.
