# src/api/editorRoutes.js
@@ -42,7 +42,7 @@ router.route('/:storyId/scenes/:sceneId/signpost')
 router.route('/:storyId/editions')
 .get(publishingController.getEditions)
 .post(publishingController.createEdition)
-router.route('/:storyId/editions/:version')
+router.route('/:storyId/editions/:editionKey')
 .get(publishingController.getEdition)
 .put(publishingController.updateEdition)
 .post(publishingController.publish)
